--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -14,7 +14,9 @@
       Add a new movie
     </h2>
 
-    <form action="/insert_movie" method="post">
+    <form action="/insert_movie" method="post" data-turbo="false">
+      <!--Prevent xs request foregery-->
+      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
       <div>
         <label for="title_box">
           Title
