--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,12 +5,12 @@
     </h1>
   </div>
 </div>
-
+<%= notice %>
 <hr>
 
 <div>
   <div>
-    <a href="/movies/new">New movie</a>
+    <a href="/movies/new">Add a new movie</a>
   </div>
 </div>
 
